=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.19_01-dev

Fixed apaci/load_modules.pl.PL to properly fixup log_agent and
log_referer when loaded as DSOs. (<vivek@khera.org>)

Fixed apaci/mod_perl.config.sh to remove the ccdlflags from the
PERL_LIBS variable when building under bsd/os 4.x, since that causes
errors when passing "cc" oriented flags to "ld".  I suspect this
should be done for all platforms, as passing cc options to ld just
seems wrong to me.  Also fixed up Makefile.PL to override Apache's
notion of LDFLAGS_SHLIB_EXPORT to use Perl's idea of the proper flags
when building as a DSO under APACI.  (<vivek@khera.org>)

=item 1.19 - April 7, 1999

Apache::Leak fixes for win32 
[Matthew Sergeant <Matthew.Sergeant@eml.ericsson.se>]

Apache::Request upload tests are skipped #ifdef USE_SFIO 

$r->send_fd() will croak() #ifdef USE_SFIO

added $r->mtime method [Andreas J. Koenig <andreas.koenig@anima.de>]

fix so version info is not inserted too early (i.e. before Apache/x.x.x)

new Apache::PerlRun::namespace_from() method, returns
$r->uri - $r->path_info, can be overridden as Apache::RegistryNG does to
return $r->filename instead

some minor test fixups for when certain things are not installed and
be sure $ENV{PERL5LIB} is used (Perl ignores w/ -T)

print() now returns true on success, false on failure (1.3.6+)

no longer set SIGPIPE handler if Apache >= 1.3.6

fix bug triggered when siggv is not initialized, spotted by Preston Brown

new Apache::PerlRun::flush_namespace method to undef() each [SAHC]V
entry, rather than a blind clear (which triggered cores, e.g. sort)

$r->custom_response will now return the current ErrorDocument

Semicolon support in $r->args [ Eric Cholet <cholet@logilune.com> ]

issue with threads in perl_config.c [ Malcolm Beattie
<mbeattie@sable.ox.ac.uk> / Koichi Nakatani <nakatani@konica.co.jp> ]

fix bug in PerlPassEnv spotted by Gerd Knops, where values were munged  
