@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.19_01-dev
 
+Change Apache::SizeLimit so that it supports Solaris 2.6 and above
+(<ix@maz.org>)
+
 Fixed apaci/load_modules.pl.PL to properly fixup log_agent and
 log_referer when loaded as DSOs. (<vivek@khera.org>)
 
